--- a/CharlyUwampojejeCV.HTML
+++ b/CharlyUwampojejeCV.HTML
@@ -7,118 +7,93 @@
     </head>
     <Body>
         <div class="main">
-            <div class="left">
+            <article class="left">
                 <br>
                 <div class="profile-img"><img src="charly01.png" height="200px"></div>
-
-                <div class="box-1">
-                    <div class="heading">
-                        <p class="p0">CONTACT</p>
-                    </div>
-                    
+                    <section class="contact">
+                        <h2>CONTACT</h2>
                     <p class="p1">+25769975104</p>
-                    <p class="p1">Uwampojejecharly@gmail.com</p>
-                    <p class="p1">Jabe Q3 AV kobero No46 <br>
+                    <p class="p1">Uwampojejecharly<br/>@gmail.com</p>
+                    <p class="p1">Jabe Q3 AV kobero No46 </br>
                         Bujumbura, Mukaza</br></p>
-                    </br>
-                </div>
-
-                <div class="box-1">
-                    <br>
-                    <div class="heading">
-                        <p class="p0">EDUCATIONS</p>
-                    </div>
-                    <P class="P1">Computer Maintenance <br>University ISGI</br> 2021 – 2022.</P>
-                    <P class="P1">Computer Maintenance <br>Polyvantent Secondary Institute</br> 2014 – 2020.</P>
-                    <P class="P1">Primary <br>Saint Michel</br> 2008 – 2014.</P>
-                </br>
-                 </div>
-
-                 <div class="box-1">
-                    <br>
-                    <div class="heading">
-                        <p class="p0">SKILLS</p>
-                    </div>
+                    </section>
+                    <section class="educations">
+                    <h2>EDUCATIONS</h2>
+                    <li class="P1">2021 - 2022<br>Computer Maintenance </br>University ISGI .</li>
+                    <li class="P1">2014 - 2020<br>Computer Maintenance </br>Polyvantent Secondary Institute.</li>
+                    <li class="P1">2008 - 2014<br>Primary</br>Saint Michel.</li>
+                    </section>
+                <section class="skills">
+                        <h2>SKILLS</h2>
                     <P class="P1"> Computer Maintenance.</P>
                     <P class="P1"> Designer/photographer.</P>
                     <P class="P1">  Photoshop/Adobe lightroom.</P>
-                </br>
-                 </div>
+                </section>
+                <section class="languages">
+                        <h2>LANGUAGES</h2>
+                    <p class="p1">FRENCH (Good)</p>
+                    <p class="p1">ENGLISH (Intermediate)</p>
+                    <p class="p1">SWAHILI (Native)</p>
+                    <p class="p1">KIRUNDI (Native)</p>
+                    <p class="p1">LUGANDA (Intermediate)</p>
+                </section>   
+            </article> 
 
-                 <div class="box1">
-                    <br>
-                    <div class="heading">
-                        <p class="p0">LANGUAGES</p>
-                    </div>
-                    <p class="p1">FRENCH</p>
-                    <p class="p1">ENGLISH</p>
-                    <p class="p1">SWAHILI</p>
-                    <p class="p1">KIRUNDI</p>
-                    <p class="p1">LUGANDA</p>
-                </br>
-                 </div>
 
-            </div>  
-
-            <div class="room2">
-            <div class="right">
-                <br>
-                <div class="name-div">
-                    <h1>Charly UWAMPOJEJE</h1>
+            <article class="right">
+                <header>
+                <section class="name-div">
+                    <h1 class="prenom">Charly</h1>
+                    <p class="nom">UWAMPOJEJE</p>
                     <P>Computer maintenance technician</P>
-                </div>
-            </br>
-
-                <div class="box-2">
-                    <div class="heading">
-                    <br>    
-                    <h2>WORK EXPERIENCE</h2>
-                    </br>
+                </section>
+                </header>
+                <section>
+                    <header>
+                    <h3>WORK EXPERIENCE</h3>
+                    <br/>
                     <P class="p2">07/2022 - 04/2023</P>
                     <h3>Nightclub security guard at PCLUB </h3>
-                    <P class="p2">13, 14 Boulevard de l’Uprona, Bujumbura</P>
-                    </div>
-                    <br>
+                    <P class="p2">13, 14 Boulevard de l'Uprona, Bujumbura</P>
+                    </header>
+                    <br/>
                     <p>I worked as a nightclub security guard. This work allowed me to have some financial means during my studies. It also allowed me to learn to collaborate with people from different backgrounds.</p>
-                    </div>
-                </br>
-                </div>
-                <div class="box-2">
-                    <div class="heading">
-                    <br>
-                    <h2>INTERNSHIP</h2>
-                    </br>
+                    <br/>
+                </section>
+                <section>
+                    <header>
+                    <h3>INTERNSHIP</h3>
+                    <br/>
                     <P class="p2">05/2023 - 06/2023</P>
                     <h3>Internship at RNJ+ </h3>
                     <p class="p2"> Mukaza, ROHERO 2, av Muyinga, Kunkiko no.49</p>
-                    </div>
-                    <br>
+                    </header>
+                    <br/>
                     <p>The aim of this internship was to work, with the different actors of the
                         RNJ+ association, on the maintenance of the IT equipment. I had the
                         opportunity to discover certain important points such as:
-                        <ul>Understanding the different components of the computer as well as
-                        their functionalities.</ul>
-                    <ul>Tools for performing software maintenance.</ul>
-                <ul>Detecting computer breakdowns.</ul></p>
-                        </br>
-                </div>
-                <div class="box-2">
-                    <div class="heading">
+                    <li>Understanding the different components of the computer as well as
+                        their functionalities.</li>
+                    <li>Tools for performing software maintenance.</li>
+                    <li>Detecting computer breakdowns.</li></p>
+                    <br/>
+                </section>
+                <section>
+                    <header>
                     <p class="p2">05/2020 - 06/2020</p>
                     <h3>Internship at CSSTDC </h3>
                     <p class="p2">Boulevard of uprona in front of the eye clinic</p>
-                    </div>
-                    <br>
-                       <p>The internship at the COMPUTER SCIENCE SERVICES TRAINING AND
+                    </header>
+                    <br/>
+                    <p>The internship at the COMPUTER SCIENCE SERVICES TRAINING AND
                         DESIGN CENTER helped me in improving my IT knowledge and also my design knowladge.
-                        In the company my objective was:
-                    <ul> Working with the collegues on Computer Maintenance;</ul>
-                <ul> Working on Design training using photoshop.</ul></p>
-                       </br>
-                </div>
+                        In the company my objective was: 
+                    <li> Working with the collegues on Computer Maintenance;</li>
+                    <li> Working on Design training using photoshop.</li></p>
+                    <br/>
+                </section>
 
-            </div> 
-            </div>  
+            </article>
         </div>
 
     </Body>
