Created a new file

--- a/CharlyUwampojejeCV.HTML
+++ b/CharlyUwampojejeCV.HTML
@@ -43,8 +43,8 @@
             <article class="right">
                 <header>
                 <section class="name-div">
-                    <h1 class="prenom">Charly</h1>
-                    <p class="nom">UWAMPOJEJE</p>
+                    <h1 class="firstName">Charly</h1>
+                    <p class="lastName">UWAMPOJEJE</p>
                     <P>Computer maintenance technician</P>
                 </section>
                 </header>
