Modified the label education in the html file

--- a/CharlyUwampojejeCV.HTML
+++ b/CharlyUwampojejeCV.HTML
@@ -18,8 +18,8 @@
                         Bujumbura, Mukaza</br></p>
                 </section>
 
-                <section class="educations">
-                    <h2>EDUCATIONS</h2>
+                <section class="education">
+                    <h2>EDUCATION</h2>
                     <li class="P1">2021 - 2022<br>Computer Maintenance </br>University ISGI .</li>
                     <li class="P1">2014 - 2020<br>Computer Maintenance </br>Polyvantent Secondary Institute.</li>
                     <li class="P1">2008 - 2014<br>Primary</br>Saint Michel.</li>
