--- a/CharlyUwampojejeCV.HTML
+++ b/CharlyUwampojejeCV.HTML
@@ -8,7 +8,7 @@
     <Body>
         <div class="main">
             <article class="left">
-                <div class="profile-img"><img src="charly01.png" height="200px">
+                <div class="profile-img"><img src="charly01.png">
                 </div>
                 <section class="contact">
                         <h2>CONTACT</h2>
