--- a/CharlyUwampojejeCV.HTML
+++ b/CharlyUwampojejeCV.HTML
@@ -1,95 +1,112 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta sharset="UTF-8">
-        <title>CV Charly</title>
-        <link rel="stylesheet" href="CharlyUwampojejeCV.css">
-    </head>
-    <Body>
-        <div class="main">
-            <article class="left">
-                <div class="profile-img"><img src="charly01.png">
-                </div>
-                <section class="contact">
-                        <h2>CONTACT</h2>
-                    <p class="p1">+25769975104</p>
-                    <p class="p1">Uwampojejecharly<br/>@gmail.com</p>
-                    <p class="p1">Jabe Q3 AV kobero No46 </br>
-                        Bujumbura, Mukaza</br></p>
-                </section>
+  <head>
+    <meta sharset="UTF-8" />
+    <title>CV Charly</title>
+    <link rel="stylesheet" href="CharlyUwampojejeCV.css" />
+  </head>
+  <body>
+    <div class="main">
+      <article class="left">
+        <div class="profile-img"><img src="charly01.png" /></div>
+        <section class="contact">
+          <h2>CONTACT</h2>
+          <p class="p1">+25769975104</p>
+          <p class="p1">Uwampojejecharly<br />@gmail.com</p>
+          <p class="p1">
+            Jabe Q3 AV kobero No46 <br />
+            Bujumbura, Mukaza<br />
+          </p>
+        </section>
 
-                <section class="education">
-                    <h2>EDUCATION</h2>
-                    <li class="P1">2021 - 2022<br>Computer Maintenance </br>University ISGI .</li>
-                    <li class="P1">2014 - 2020<br>Computer Maintenance </br>Polyvantent Secondary Institute.</li>
-                    <li class="P1">2008 - 2014<br>Primary</br>Saint Michel.</li>
-                </section>
+        <section class="education">
+          <h2>EDUCATION</h2>
+          <li class="P1">
+            2021 - 2022<br />
+            Computer Maintenance <br />University ISGI .
+          </li>
+          <li class="P1">
+            2014 - 2020<br />
+            Computer Maintenance <br />Polyvantent Secondary Institute.
+          </li>
+          <li class="P1">2008 - 2014<br />Primary<br />Saint Michel.</li>
+        </section>
 
-                <section class="skills">
-                        <h2>SKILLS</h2>
-                    <P class="P1"> Computer Maintenance.</P>
-                    <P class="P1"> Designer/photographer.</P>
-                    <P class="P1">  Photoshop/Adobe lightroom.</P>
-                </section>
+        <section class="skills">
+          <h2>SKILLS</h2>
+          <p class="P1">Computer Maintenance.</p>
+          <p class="P1">Designer/photographer.</p>
+          <p class="P1">Photoshop/Adobe lightroom.</p>
+        </section>
 
-                <section class="languages">
-                        <h2>LANGUAGES</h2>
-                    <p class="p1">FRENCH (Good)</p>
-                    <p class="p1">ENGLISH (Intermediate)</p>
-                    <p class="p1">SWAHILI (Native)</p>
-                    <p class="p1">KIRUNDI (Native)</p>
-                    <p class="p1">LUGANDA (Intermediate)</p>
-                </section>   
-            </article> 
+        <section class="languages">
+          <h2>LANGUAGES</h2>
+          <p class="p1">FRENCH (Good)</p>
+          <p class="p1">ENGLISH (Intermediate)</p>
+          <p class="p1">SWAHILI (Native)</p>
+          <p class="p1">KIRUNDI (Native)</p>
+          <p class="p1">LUGANDA (Intermediate)</p>
+        </section>
+      </article>
 
-            <article class="right">
-                <header>
-                <section class="name-div">
-                    <h1 class="firstName">Charly</h1>
-                    <p class="lastName">UWAMPOJEJE</p>
-                    <P>Computer maintenance technician</P>
-                </section>
-                </header>
+      <article class="right">
+        <header>
+          <section class="name-div">
+            <h1 class="firstName">Charly</h1>
+            <p class="lastName">UWAMPOJEJE</p>
+            <p>Computer maintenance technician</p>
+          </section>
+        </header>
 
-                <section>
-                <header>
-                    <h2 class="h3">WORK EXPERIENCE</h2>
-                    <P class="p2">07/2022 - 04/2023</P>
-                    <h3>Nightclub security guard at PCLUB </h3>
-                    <P class="p2">13, 14 Boulevard de l'Uprona, Bujumbura</P>
-                </header>
-                    <p>I worked as a nightclub security guard. This work allowed me to have some financial means during my studies. It also allowed me to learn to collaborate with people from different backgrounds.</p>
-                </section>
+        <section>
+          <header>
+            <h2 class="h3">WORK EXPERIENCE</h2>
+            <p class="p2">07/2022 - 04/2023</p>
+            <h3>Nightclub security guard at PCLUB</h3>
+            <p class="p2">13, 14 Boulevard de l'Uprona, Bujumbura</p>
+          </header>
+          <p>
+            I worked as a nightclub security guard. This work allowed me to have
+            some financial means during my studies. It also allowed me to learn
+            to collaborate with people from different backgrounds.
+          </p>
+        </section>
 
-                <section>
-                <header>
-                    <h2>INTERNSHIP</h2>
-                    <P class="p2">05/2023 - 06/2023</P>
-                    <h3>Internship at RNJ+ </h3>
-                    <p class="p2"> Mukaza, ROHERO 2, av Muyinga, Kunkiko no.49</p>
-                </header>
-                    <p>The aim of this internship was to work, with the different actors of the
-                        RNJ+ association, on the maintenance of the IT equipment. I had the
-                        opportunity to discover certain important points such as:
-                    <li>Understanding the different components of the computer as well as
-                        their functionalities.</li>
-                    <li>Tools for performing software maintenance.</li>
-                    <li>Detecting computer breakdowns.</li></p>                   
-                </section>
+        <section>
+          <header>
+            <h2>INTERNSHIP</h2>
+            <p class="p2">05/2023 - 06/2023</p>
+            <h3>Internship at RNJ+</h3>
+            <p class="p2">Mukaza, ROHERO 2, av Muyinga, Kunkiko no.49</p>
+          </header>
+          <p>
+            The aim of this internship was to work, with the different actors of
+            the RNJ+ association, on the maintenance of the IT equipment. I had
+            the opportunity to discover certain important points such as:
+            <li>
+              Understanding the different components of the computer as well as
+              their functionalities.
+            </li>
+            <li>Tools for performing software maintenance.</li>
+            <li>Detecting computer breakdowns.</li>
+          </p>
+        </section>
 
-                <section>
-                <header>
-                    <p class="p2">05/2020 - 06/2020</p>
-                    <h3>Internship at CSSTDC </h3>
-                    <p class="p2">Boulevard of uprona in front of the eye clinic</p>
-                </header>
-                    <p>The internship at the COMPUTER SCIENCE SERVICES TRAINING AND
-                        DESIGN CENTER helped me in improving my IT knowledge and also my design knowladge.
-                        In the company my objective was: 
-                    <li> Working with the collegues on Computer Maintenance;</li>
-                    <li> Working on Design training using photoshop.</li></p> 
-                </section>
-            </article>
-        </div>
-    </Body>
+        <section>
+          <header>
+            <p class="p2">05/2020 - 06/2020</p>
+            <h3>Internship at CSSTDC</h3>
+            <p class="p2">Boulevard of uprona in front of the eye clinic</p>
+          </header>
+          <p>
+            The internship at the COMPUTER SCIENCE SERVICES TRAINING AND DESIGN
+            CENTER helped me in improving my IT knowledge and also my design
+            knowladge. In the company my objective was:
+            <li>Working with the collegues on Computer Maintenance;</li>
+            <li>Working on Design training using photoshop.</li>
+          </p>
+        </section>
+      </article>
+    </div>
+  </body>
 </html>
